--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D'
 - !lcsh 'Europe -- Description and travel'
+- GITenberg
 tableOfContents: Hamburg at a first glance -- Heidelberg in winter -- A flying sheet
   from Paris -- Baden-Baden -- Rambles about Stuttgart -- The solitude -- A day in
   the Black Forest -- The Lenninger Thal -- Franciska von Hohenheim -- "Nuremberg
